# QT-Banking-System-Server

./: .clang-uml  .gitmodules  CMakeLists.txt  CreateNewUserRequest_8h.html  CreateNewUserRequest_8h.js  CreateNewUserRequest_8h__dep__incl.map  CreateNewUserRequest_8h__dep__incl.md5  CreateNewUserRequest_8h__incl.map  CreateNewUserRequest_8h__incl.md5  CreateNewUserRequest_8h_source.html  DeleteUserRequest_8h.html  DeleteUserRequest_8h__dep__incl.map  DeleteUserRequest_8h__dep__incl.md5  DeleteUserRequest_8h__incl.map  DeleteUserRequest_8h__incl.md5  DeleteUserRequest_8h_source.html  GetAccountNumberRequest_8h.html  GetAccountNumberRequest_8h__dep__incl.map  GetAccountNumberRequest_8h__dep__incl.md5  GetAccountNumberRequest_8h__incl.map  GetAccountNumberRequest_8h__incl.md5  GetAccountNumberRequest_8h_source.html  GetBalanceRequest_8h.html  GetBalanceRequest_8h__dep__incl.map  GetBalanceRequest_8h__dep__incl.md5  GetBalanceRequest_8h__incl.map  GetBalanceRequest_8h__incl.md5  GetBalanceRequest_8h_source.html  GetDatabaseRequest_8h.html  GetDatabaseRequest_8h__dep__incl.map  GetDatabaseRequest_8h__dep__incl.md5  GetDatabaseRequest_8h__incl.map  GetDatabaseRequest_8h__incl.md5  GetDatabaseRequest_8h_source.html  GetTransactionsHistoryRequest_8h.html  GetTransactionsHistoryRequest_8h__dep__incl.map  GetTransactionsHistoryRequest_8h__dep__incl.md5  GetTransactionsHistoryRequest_8h__incl.map  GetTransactionsHistoryRequest_8h__incl.md5  GetTransactionsHistoryRequest_8h_source.html  (+374 more)
tests/: CMakeLists.txt
tests/RequestHandler/: CMakeLists.txt  RequestHandlerTest.cpp
(+707 files in other folders)
